--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -8,7 +8,7 @@ sites:
   - name: Inside FintechOS
     url: https://inside.fintechos.com
   - name: DCX360
-    url: https://http://dcx360.io/
+    url: https://dcx360.io
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
