--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -10,15 +10,18 @@ sites:
   - name: DCX360
     url: https://dcx360.io
 
+assignees: # Users to assign downtime issues (optional)
+  - marketingfintechos
+  
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
   # cname: demo.upptime.js.org
   baseUrl: /uptime.fintechos.com
   logoUrl: https://fintechos.com/wp-content/uploads/2021/04/fintechos-primary-logo.svg
-  name: FintechOS
-  introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
-  introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
+  name: FintechOS Web Status
+  introTitle: "FintechOS Marketing Websites Status Page"
+  introMessage: Upptime is the open-source uptime monitor and status page, powered entirely by GitHub.
   navbar:
     - title: Status
       href: /
