--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,4 +1,4 @@
-int# Change these first
+# Change these first
 owner: marketingfintechos # Your GitHub organization or username, where this repository lives
 repo: uptime.fintechos.com # The name of this repository
 
